// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Contacts/> listing tab renders a contact 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Listing
    listItem={
      Object {
        "about": "I am mocked person :)",
        "image": "",
        "name": "Larry John",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "avatar": "",
      "subtitle": "I am mocked person :)",
      "title": "Larry John",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "avatar": "",
        "subtitle": "I am mocked person :)",
        "title": "Larry John",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Contacts/> listing tab renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Contacts />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {},
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Contacts/> listing tab should list all chats 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): ShallowWrapper {
    "length": 1,
    Symbol(enzyme.__root__): [Circular],
    Symbol(enzyme.__unrendered__): <ScreenView />,
    Symbol(enzyme.__renderer__): Object {
      "batchedUpdates": [Function],
      "getNode": [Function],
      "render": [Function],
      "simulateEvent": [Function],
      "unmount": [Function],
    },
    Symbol(enzyme.__node__): Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <List
          containerStyle={
            Object {
              "borderTopWidth": 0,
              "marginTop": 13,
            }
          }
        >
          <Listing
            listItem={
              Object {
                "about": "Just a cool guy",
                "image": Object {
                  "testUri": "../../../static/pp.jpg",
                },
                "name": "Larry John",
              }
            }
          />
          <Listing
            listItem={
              Object {
                "about": "Currently coding",
                "image": Object {
                  "testUri": "../../../static/yuna.jpg",
                },
                "name": "Jane Doe",
              }
            }
          />
        </List>,
        "style": Object {
          "backgroundColor": "#fff",
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <Listing
              listItem={
                Object {
                  "about": "Just a cool guy",
                  "image": Object {
                    "testUri": "../../../static/pp.jpg",
                  },
                  "name": "Larry John",
                }
              }
            />,
            <Listing
              listItem={
                Object {
                  "about": "Currently coding",
                  "image": Object {
                    "testUri": "../../../static/yuna.jpg",
                  },
                  "name": "Jane Doe",
                }
              }
            />,
          ],
          "containerStyle": Object {
            "borderTopWidth": 0,
            "marginTop": 13,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "function",
            "props": Object {
              "listItem": Object {
                "about": "Just a cool guy",
                "image": Object {
                  "testUri": "../../../static/pp.jpg",
                },
                "name": "Larry John",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "function",
            "props": Object {
              "listItem": Object {
                "about": "Currently coding",
                "image": Object {
                  "testUri": "../../../static/yuna.jpg",
                },
                "name": "Jane Doe",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
    Symbol(enzyme.__nodes__): Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <List
            containerStyle={
              Object {
                "borderTopWidth": 0,
                "marginTop": 13,
              }
            }
          >
            <Listing
              listItem={
                Object {
                  "about": "Just a cool guy",
                  "image": Object {
                    "testUri": "../../../static/pp.jpg",
                  },
                  "name": "Larry John",
                }
              }
            />
            <Listing
              listItem={
                Object {
                  "about": "Currently coding",
                  "image": Object {
                    "testUri": "../../../static/yuna.jpg",
                  },
                  "name": "Jane Doe",
                }
              }
            />
          </List>,
          "style": Object {
            "backgroundColor": "#fff",
            "flex": 1,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <Listing
                listItem={
                  Object {
                    "about": "Just a cool guy",
                    "image": Object {
                      "testUri": "../../../static/pp.jpg",
                    },
                    "name": "Larry John",
                  }
                }
              />,
              <Listing
                listItem={
                  Object {
                    "about": "Currently coding",
                    "image": Object {
                      "testUri": "../../../static/yuna.jpg",
                    },
                    "name": "Jane Doe",
                  }
                }
              />,
            ],
            "containerStyle": Object {
              "borderTopWidth": 0,
              "marginTop": 13,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "function",
              "props": Object {
                "listItem": Object {
                  "about": "Just a cool guy",
                  "image": Object {
                    "testUri": "../../../static/pp.jpg",
                  },
                  "name": "Larry John",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "function",
              "props": Object {
                "listItem": Object {
                  "about": "Currently coding",
                  "image": Object {
                    "testUri": "../../../static/yuna.jpg",
                  },
                  "name": "Jane Doe",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    Symbol(enzyme.__options__): Object {
      "adapter": ReactSixteenAdapter {
        "options": Object {
          "enableComponentDidUpdateOnSetState": true,
        },
      },
    },
  },
  Symbol(enzyme.__unrendered__): null,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Listing
          listItem={
            Object {
              "about": "Just a cool guy",
              "image": Object {
                "testUri": "../../../static/pp.jpg",
              },
              "name": "Larry John",
            }
          }
        />,
        <Listing
          listItem={
            Object {
              "about": "Currently coding",
              "image": Object {
                "testUri": "../../../static/yuna.jpg",
              },
              "name": "Jane Doe",
            }
          }
        />,
      ],
      "containerStyle": Object {
        "borderTopWidth": 0,
        "marginTop": 13,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "0",
        "nodeType": "function",
        "props": Object {
          "listItem": Object {
            "about": "Just a cool guy",
            "image": Object {
              "testUri": "../../../static/pp.jpg",
            },
            "name": "Larry John",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "function",
        "props": Object {
          "listItem": Object {
            "about": "Currently coding",
            "image": Object {
              "testUri": "../../../static/yuna.jpg",
            },
            "name": "Jane Doe",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Listing
            listItem={
              Object {
                "about": "Just a cool guy",
                "image": Object {
                  "testUri": "../../../static/pp.jpg",
                },
                "name": "Larry John",
              }
            }
          />,
          <Listing
            listItem={
              Object {
                "about": "Currently coding",
                "image": Object {
                  "testUri": "../../../static/yuna.jpg",
                },
                "name": "Jane Doe",
              }
            }
          />,
        ],
        "containerStyle": Object {
          "borderTopWidth": 0,
          "marginTop": 13,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "function",
          "props": Object {
            "listItem": Object {
              "about": "Just a cool guy",
              "image": Object {
                "testUri": "../../../static/pp.jpg",
              },
              "name": "Larry John",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "function",
          "props": Object {
            "listItem": Object {
              "about": "Currently coding",
              "image": Object {
                "testUri": "../../../static/yuna.jpg",
              },
              "name": "Jane Doe",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
